fix matrix column spacing(it's too big)

--- a/app/assets/stylesheets/tasks.css.less
+++ b/app/assets/stylesheets/tasks.css.less
@@ -84,7 +84,7 @@ em {
   }
   textarea, pre {
     font-family: monospace;
-    word-spacing: 1em; // columns are separated with very a long space
+    word-spacing: 0.5em; // columns are separated with very a long space
   }
 }
 
